foundation-objs/main/default/objects/Lead/fields/Final_Area__c.field-meta.xml
<CustomField>
    <fullName>Final_Area__c</fullName>
    <label>Final Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>