foundation-objs/main/default/objects/Lead/fields/Final_Segment__c.field-meta.xml
<CustomField>
    <fullName>Final_Segment__c</fullName>
    <label>Final Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Segment 1</fullName>
            </value>
            <value>
                <fullName>Segment 2</fullName>
            </value>
            <value>
                <fullName>Segment 3</fullName>
            </value>
            <value>
                <fullName>Segment 4</fullName>
            </value>
            <value>
                <fullName>Segment 5</fullName>
            </value>
            <value>
                <fullName>Segment 6</fullName>
            </value>
            <value>
                <fullName>Segment 7</fullName>
            </value>
            <value>
                <fullName>Segment 8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>