foundation-objs/main/default/objects/Lead/fields/Final_Segment_Account__c.field-meta.xml
<CustomField>
    <fullName>Final_Segment_Account__c</fullName>
    <formula>TEXT(Account__r.Final_Segment__c)</formula>
    <label>Final Segment(Account/PAN)</label>
    <type>Text</type>
</CustomField>