foundation-objs/main/default/objects/Lead/fields/first_conversion_date__c.field-meta.xml
<CustomField>
    <fullName>first_conversion_date__c</fullName>
    <description>Date this contact first submitted a form.</description>
    <label>First Conversion Date</label>
    <type>DateTime</type>
</CustomField>