foundation-objs/main/default/objects/Lead/fields/first_conversion_event_name__c.field-meta.xml
<CustomField>
    <fullName>first_conversion_event_name__c</fullName>
    <description>First form this contact submitted.</description>
    <label>First Conversion</label>
    <length>100</length>
    <type>Text</type>
</CustomField>