foundation-objs/main/default/objects/Lead/fields/First_MQL_Date__c.field-meta.xml
<CustomField>
    <fullName>First_MQL_Date__c</fullName>
    <label>First MQL Date</label>
    <type>Date</type>
</CustomField>