foundation-objs/main/default/objects/Lead/fields/Fixed_Date__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Date__c</fullName>
    <label>Fixed Date</label>
    <type>Date</type>
</CustomField>