foundation-objs/main/default/objects/Lead/fields/Followup_date_deal_desk__c.field-meta.xml
<CustomField>
    <fullName>Followup_date_deal_desk__c</fullName>
    <label>Followup date deal desk</label>
    <type>Date</type>
</CustomField>