foundation-objs/main/default/objects/Lead/fields/GCC_Number_of_Invoices_per_month__c.field-meta.xml
<CustomField>
    <fullName>GCC_Number_of_Invoices_per_month__c</fullName>
    <label>GCC Number of Invoices per month</label>
    <length>255</length>
    <type>Text</type>
</CustomField>