foundation-objs/main/default/objects/Lead/fields/GSTIN__c.field-meta.xml
<CustomField>
    <fullName>GSTIN__c</fullName>
    <label>GSTIN</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 GSTIN</fullName>
            </value>
            <value>
                <fullName>2-4 GSTINs</fullName>
            </value>
            <value>
                <fullName>5-10 GSTINs</fullName>
            </value>
            <value>
                <fullName>11-20 GSTINs</fullName>
            </value>
            <value>
                <fullName>21-50 GSTINs</fullName>
            </value>
            <value>
                <fullName>above 50</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>