foundation-objs/main/default/objects/Lead/fields/hs_analytics_last_url__c.field-meta.xml
<CustomField>
    <fullName>hs_analytics_last_url__c</fullName>
    <description>Last page the contact visited on your website. Set automatically.</description>
    <label>Last Page Seen</label>
    <length>100</length>
    <type>Text</type>
</CustomField>