foundation-objs/main/default/objects/Lead/fields/hs_analytics_source__c.field-meta.xml
<CustomField>
    <fullName>hs_analytics_source__c</fullName>
    <description>First known source the contact used to find your website. Set automatically, but may be updated manually.</description>
    <label>Original Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>