foundation-objs/main/default/objects/Lead/fields/hs_analytics_source_data_2__c.field-meta.xml
<CustomField>
    <fullName>hs_analytics_source_data_2__c</fullName>
    <description>Additional information about the source the contact used to find your website. Set automatically.</description>
    <label>Original Source Drill-Down 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>