foundation-objs/main/default/objects/Lead/fields/hs_email_domain__c.field-meta.xml
<CustomField>
    <fullName>hs_email_domain__c</fullName>
    <description>A contact&apos;s email address domain</description>
    <label>Email Domain</label>
    <length>100</length>
    <type>Text</type>
</CustomField>