foundation-objs/main/default/objects/Lead/fields/hs_latest_source_data_1__c.field-meta.xml
<CustomField>
    <fullName>hs_latest_source_data_1__c</fullName>
    <description>Additional information about the latest source for the last session the contact used to find your website. Set automatically.</description>
    <label>Latest Source Drill-Down 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>