foundation-objs/main/default/objects/Lead/fields/hs_latest_source_data_2__c.field-meta.xml
<CustomField>
    <fullName>hs_latest_source_data_2__c</fullName>
    <description>Additional information about the source for the last session the contact used to find your website. Set automatically.</description>
    <label>Latest Source Drill-Down 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>