foundation-objs/main/default/objects/Lead/fields/hs_lifecyclestage_marketingqualifiedle__c.field-meta.xml
<CustomField>
    <fullName>hs_lifecyclestage_marketingqualifiedle__c</fullName>
    <description>The date when a contact&apos;s lifecycle stage changed to MQL. This is automatically set by HubSpot for each contact.</description>
    <label>Became a Marketing Qualified Lead Date</label>
    <type>DateTime</type>
</CustomField>