foundation-objs/main/default/objects/Lead/fields/hs_lifecyclestage_other_date__c.field-meta.xml
<CustomField>
    <fullName>hs_lifecyclestage_other_date__c</fullName>
    <description>The date when a contact&apos;s lifecycle stage changed to Other. This is automatically set by HubSpot for each contact.</description>
    <label>Became an Other Lifecycle Date</label>
    <type>DateTime</type>
</CustomField>