foundation-objs/main/default/objects/Lead/fields/hs_lifecyclestage_salesqualifiedlead_d__c.field-meta.xml
<CustomField>
    <fullName>hs_lifecyclestage_salesqualifiedlead_d__c</fullName>
    <description>The date when a contact&apos;s lifecycle stage changed to SQL. This is automatically set by HubSpot for each contact.</description>
    <label>Became a Sales Qualified Lead Date</label>
    <type>DateTime</type>
</CustomField>