foundation-objs/main/default/objects/Lead/fields/hubspotscore__c.field-meta.xml
<CustomField>
    <fullName>hubspotscore__c</fullName>
    <description>The number that shows qualification of contacts to sales readiness. It can be set in HubSpot&apos;s Lead Scoring app.</description>
    <label>HubSpot Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>