foundation-objs/main/default/objects/Lead/fields/ID_Owner__c.field-meta.xml
<CustomField>
    <fullName>ID_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ID Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ID_Owner</relationshipName>
    <type>Lookup</type>
</CustomField>