foundation-objs/main/default/objects/Lead/fields/ID_Type__c.field-meta.xml
<CustomField>
    <fullName>ID_Type__c</fullName>
    <label>ID Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buyer</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Financier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>