foundation-objs/main/default/objects/Lead/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry(C)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Industry_Multi_Picklist</valueSetName>
    </valueSet>
</CustomField>