foundation-objs/main/default/objects/Lead/fields/Industry_in_case_of_custom_ERP__c.field-meta.xml
<CustomField>
    <fullName>Industry_in_case_of_custom_ERP__c</fullName>
    <label>Industry (in case of custom ERP)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>