foundation-objs/main/default/objects/Lead/fields/Intent_of_Purchasing__c.field-meta.xml
<CustomField>
    <fullName>Intent_of_Purchasing__c</fullName>
    <label>Intent of Purchasing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing + Filing</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Reconciliation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>