foundation-objs/main/default/objects/Lead/fields/Intent_Stage__c.field-meta.xml
<CustomField>
    <fullName>Intent_Stage__c</fullName>
    <label>Intent Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Channel Awareness</fullName>
            </value>
            <value>
                <fullName>Consideration</fullName>
            </value>
            <value>
                <fullName>Intent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>