foundation-objs/main/default/objects/Lead/fields/Interested_in_E_invoicing_GCC__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_E_invoicing_GCC__c</fullName>
    <label>Interested in E invoicing ? (GCC)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>