foundation-objs/main/default/objects/Lead/fields/Invoice_Discounting_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Discounting_Annual_Revenue__c</fullName>
    <label>Invoice Discounting Annual Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>