foundation-objs/main/default/objects/Lead/fields/Is_Communicable__c.field-meta.xml
<CustomField>
    <fullName>Is_Communicable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Communicable?</label>
    <type>Checkbox</type>
</CustomField>