foundation-objs/main/default/objects/Lead/fields/IS_FS__c.field-meta.xml
<CustomField>
    <fullName>IS_FS__c</fullName>
    <label>IS/FS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inside Sales</fullName>
            </value>
            <value>
                <fullName>Field Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>