foundation-objs/main/default/objects/Lead/fields/isConvertingNow__c.field-meta.xml
<CustomField>
    <fullName>isConvertingNow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isConvertingNow?</label>
    <type>Checkbox</type>
</CustomField>