foundation-objs/main/default/objects/Lead/fields/IsCurrentUserAsOwner__c.field-meta.xml
<CustomField>
    <fullName>IsCurrentUserAsOwner__c</fullName>
    <formula>IF(OwnerId = $User.Id,true,false)</formula>
    <label>IsCurrentUserAsOwner</label>
    <type>Checkbox</type>
</CustomField>