foundation-objs/main/default/objects/Lead/fields/ISD__c.field-meta.xml
<CustomField>
    <fullName>ISD__c</fullName>
    <description>Isd code</description>
    <label>ISD</label>
    <length>10</length>
    <type>Text</type>
</CustomField>