foundation-objs/main/default/objects/Lead/fields/isQualified__c.field-meta.xml
<CustomField>
    <fullName>isQualified__c</fullName>
    <label>isQualified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>