foundation-objs/main/default/objects/Lead/fields/isRPOC__c.field-meta.xml
<CustomField>
    <fullName>isRPOC__c</fullName>
    <description>This field is for reporting purpose to get the count of the data.</description>
    <label>isRPOC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>