foundation-objs/main/default/objects/Lead/fields/JSON_Field__c.field-meta.xml
<CustomField>
    <fullName>JSON_Field__c</fullName>
    <label>JSON Field</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>