foundation-objs/main/default/objects/Lead/fields/Language_Preffered__c.field-meta.xml
<CustomField>
    <fullName>Language_Preffered__c</fullName>
    <label>Language Preffered</label>
    <length>50</length>
    <type>Text</type>
</CustomField>