foundation-objs/main/default/objects/Lead/fields/Lead_Allocated_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Allocated_Date_Time__c</fullName>
    <label>Lead Allocated Date/Time</label>
    <type>DateTime</type>
</CustomField>