foundation-objs/main/default/objects/Lead/fields/lead_assigned_to_deal_desk__c.field-meta.xml
<CustomField>
    <fullName>lead_assigned_to_deal_desk__c</fullName>
    <label>lead assigned to(deal desk)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Suhas G</fullName>
            </value>
            <value>
                <fullName>Tushar Bajaj</fullName>
            </value>
            <value>
                <fullName>Saurabh Sehgal(N1)</fullName>
            </value>
            <value>
                <fullName>Mayank Gupta(N2)</fullName>
            </value>
            <value>
                <fullName>Swamy Santosh</fullName>
            </value>
            <value>
                <fullName>Akhil Chabra(W2)</fullName>
            </value>
            <value>
                <fullName>Sameer Dubey(W1)</fullName>
            </value>
            <value>
                <fullName>Anand Khare(channel)</fullName>
            </value>
            <value>
                <fullName>Ayushi Rai(channel)</fullName>
            </value>
            <value>
                <fullName>Parimal Pandey(SME)</fullName>
            </value>
            <value>
                <fullName>Sweety Sharma(SME)</fullName>
            </value>
            <value>
                <fullName>Arushi Agrawal(IS)</fullName>
            </value>
            <value>
                <fullName>Syeda Jahan</fullName>
            </value>
            <value>
                <fullName>Varun Kumar</fullName>
            </value>
            <value>
                <fullName>Adwait Chandekar</fullName>
            </value>
            <value>
                <fullName>Chetan Agarwal</fullName>
            </value>
            <value>
                <fullName>Eshan Gupta</fullName>
            </value>
            <value>
                <fullName>Nitin Sreenivasan(S)</fullName>
            </value>
            <value>
                <fullName>Kanika Sehgal(IS)</fullName>
            </value>
            <value>
                <fullName>Amit Desi</fullName>
            </value>
            <value>
                <fullName>Amiya Jha</fullName>
            </value>
            <value>
                <fullName>Anand Khare</fullName>
            </value>
            <value>
                <fullName>Ankit Singhvi</fullName>
            </value>
            <value>
                <fullName>Anosh Lepcha</fullName>
            </value>
            <value>
                <fullName>Apoorv Katiyar</fullName>
            </value>
            <value>
                <fullName>Archit Jindal</fullName>
            </value>
            <value>
                <fullName>Admin Queue</fullName>
            </value>
            <value>
                <fullName>Vasupraveen reddy</fullName>
            </value>
            <value>
                <fullName>Ananya bhaumki(SME)</fullName>
            </value>
            <value>
                <fullName>Suparv Jain(Channel)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>