foundation-objs/main/default/objects/Lead/fields/Lead_creation_date__c.field-meta.xml
<CustomField>
    <fullName>Lead_creation_date__c</fullName>
    <formula>IF( AND(TEXT(Status) = &apos;Qualified&apos;, ISNULL(Date_Of_Incoming_Lead__c) ) , DATEVALUE(CreatedDate),Date_Of_Incoming_Lead__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead creation date</label>
    <type>Date</type>
</CustomField>