foundation-objs/main/default/objects/Lead/fields/Lead_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Lead_ID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Lead ID (18)</label>
    <type>Text</type>
</CustomField>