foundation-objs/main/default/objects/Lead/fields/Lead_Locked_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Locked_Date__c</fullName>
    <label>Lead Locked Date</label>
    <type>Date</type>
</CustomField>