foundation-objs/main/default/objects/Lead/fields/Lead_Locking_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Locking_Status__c</fullName>
    <defaultValue>&apos;Unlocked&apos;</defaultValue>
    <label>Lead Locking Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Locked</fullName>
            </value>
            <value>
                <fullName>Unlocked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>