foundation-objs/main/default/objects/Lead/fields/lead_lost_reason_deal_desk__c.field-meta.xml
<CustomField>
    <fullName>lead_lost_reason_deal_desk__c</fullName>
    <label>lead lost reason deal desk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Already finalized a Vendor</fullName>
            </value>
            <value>
                <fullName>Company Closed</fullName>
            </value>
            <value>
                <fullName>E-Invoice Not Applicable</fullName>
            </value>
            <value>
                <fullName>GST Exempt</fullName>
            </value>
            <value>
                <fullName>Less Invoices</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Pricing Issue</fullName>
            </value>
            <value>
                <fullName>denied to talk</fullName>
            </value>
            <value>
                <fullName>Happy with current Competitor software</fullName>
            </value>
            <value>
                <fullName>Happy with the current vendor/CA/Service provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>