foundation-objs/main/default/objects/Lead/fields/Lead_owner_Category__c.field-meta.xml
<CustomField>
    <fullName>Lead_owner_Category__c</fullName>
    <formula>text(Owner:User.User_Category__c)</formula>
    <label>Lead owner Category</label>
    <type>Text</type>
</CustomField>