foundation-objs/main/default/objects/Lead/fields/Lead_Owner_department__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_department__c</fullName>
    <formula>Owner:User.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Owner : Department</label>
    <type>Text</type>
</CustomField>