foundation-objs/main/default/objects/Lead/fields/Lead_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Email__c</fullName>
    <formula>Owner:User.Email</formula>
    <label>Lead Owner :Email</label>
    <type>Text</type>
</CustomField>