foundation-objs/main/default/objects/Lead/fields/Lead_Owner_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Full_Name__c</fullName>
    <formula>Owner:User.FirstName&amp;&quot; &quot;&amp; Owner:User.LastName</formula>
    <label>Owner: Full Name</label>
    <type>Text</type>
</CustomField>