foundation-objs/main/default/objects/Lead/fields/Lead_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Manager__c</fullName>
    <formula>Owner:User.Manager.FirstName&amp;&quot; &quot;&amp; Owner:User.Manager.LastName</formula>
    <label>Lead Owner : Manager</label>
    <type>Text</type>
</CustomField>