foundation-objs/main/default/objects/Lead/fields/Lead_Owner_team_C__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_team_C__c</fullName>
    <description>To edit this field edit the Team(c) formula field in users Object</description>
    <formula>Owner:User.Team_C__c</formula>
    <label>Lead Owner team(C)</label>
    <type>Text</type>
</CustomField>