foundation-objs/main/default/objects/Lead/fields/Lead_Owner_team_C_WBR__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_team_C_WBR__c</fullName>
    <formula>Owner:User.Team_WBR_C__c</formula>
    <label>Lead Owner team(C)(WBR)</label>
    <type>Text</type>
</CustomField>