foundation-objs/main/default/objects/Lead/fields/Lead_priority_for_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_priority_for_ID__c</fullName>
    <label>Lead priority ( for ID )</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>