foundation-objs/main/default/objects/Lead/fields/Lead_Record_Type_For_conversion__c.field-meta.xml
<CustomField>
    <fullName>Lead_Record_Type_For_conversion__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Record Type(For conversion)</label>
    <type>Text</type>
</CustomField>