foundation-objs/main/default/objects/Lead/fields/Lead_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Request_Type__c</fullName>
    <label>Lead Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RAD</fullName>
            </value>
            <value>
                <fullName>Signup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>