foundation-objs/main/default/objects/Lead/fields/Lead_Score_Colour_Code__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score_Colour_Code__c</fullName>
    <formula>IF( Colour__c = &apos;Green&apos; , 
 IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Green&quot;, 20, 60),
  IF( Colour__c = &apos;Yellow&apos;,
    IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;Yellow&quot;, 20, 60),
   IF( Colour__c = &apos;Orange&apos;,
     IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;Orange&quot;, 20, 60),&apos;&apos;
    )
  )
)</formula>
    <label>Lead Score Colour Code</label>
    <type>Text</type>
</CustomField>