foundation-objs/main/default/objects/Lead/fields/Lead_Source_Details__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Details__c</fullName>
    <label>Lead Source Details</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>