foundation-objs/main/default/objects/Lead/fields/Lead_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Sub_Source__c</fullName>
    <label>Lead Sub Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CA Referral</fullName>
            </value>
            <value>
                <fullName>Chatbot</fullName>
            </value>
            <value>
                <fullName>Contact Us</fullName>
            </value>
            <value>
                <fullName>Daily Demo Business Leads</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Google Ads</fullName>
            </value>
            <value>
                <fullName>GST Support Desk</fullName>
            </value>
            <value>
                <fullName>Inbound Mail</fullName>
            </value>
            <value>
                <fullName>Instapage</fullName>
            </value>
            <value>
                <fullName>Landing Page</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Microsite</fullName>
            </value>
            <value>
                <fullName>Ozontel</fullName>
            </value>
            <value>
                <fullName>Product Sign Up</fullName>
            </value>
            <value>
                <fullName>Tally</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Karza</fullName>
            </value>
            <value>
                <fullName>Neo Kinetics</fullName>
            </value>
            <value>
                <fullName>other Purchased</fullName>
            </value>
            <value>
                <fullName>Figment</fullName>
            </value>
            <value>
                <fullName>Incoming Demo Emails</fullName>
            </value>
            <value>
                <fullName>Customer Referral</fullName>
            </value>
            <value>
                <fullName>Exisitng Customer - New Scope</fullName>
            </value>
            <value>
                <fullName>Cold Calls</fullName>
            </value>
            <value>
                <fullName>Incoming Emails</fullName>
            </value>
            <value>
                <fullName>CA2013.com</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>