foundation-objs/main/default/objects/Lead/fields/Lead_TAT__c.field-meta.xml
<CustomField>
    <fullName>Lead_TAT__c</fullName>
    <formula>ConvertedDate  - datevalue(CreatedDate)</formula>
    <label>Lead TAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>