foundation-objs/main/default/objects/Lead/fields/LeadSource_formula__c.field-meta.xml
<CustomField>
    <fullName>LeadSource_formula__c</fullName>
    <description>Used to update the account source in lead mapping.</description>
    <formula>TEXT(LeadSource)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LeadSource formula</label>
    <type>Text</type>
</CustomField>