foundation-objs/main/default/objects/Lead/fields/LeadSourceBackEnd__c.field-meta.xml
<CustomField>
    <fullName>LeadSourceBackEnd__c</fullName>
    <label>LeadSourceBackEnd</label>
    <length>50</length>
    <type>Text</type>
</CustomField>