foundation-objs/main/default/objects/Lead/fields/Listed_Unlisted_Status__c.field-meta.xml
<CustomField>
    <fullName>Listed_Unlisted_Status__c</fullName>
    <label>Listed/Unlisted Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Listed</fullName>
            </value>
            <value>
                <fullName>Unlisted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>