foundation-objs/main/default/objects/Lead/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Already finalized a Vendor</fullName>
            </value>
            <value>
                <fullName>Company Closed</fullName>
            </value>
            <value>
                <fullName>E-Invoice Not Applicable</fullName>
            </value>
            <value>
                <fullName>Existing Client SME</fullName>
            </value>
            <value>
                <fullName>GST Exempt</fullName>
            </value>
            <value>
                <fullName>In touch with ClearTax</fullName>
            </value>
            <value>
                <fullName>Less Invoices</fullName>
            </value>
            <value>
                <fullName>Less than 50 Cr</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
            <value>
                <fullName>Not reachable</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Pricing Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>