foundation-objs/main/default/objects/Lead/fields/Lost_Date__c.field-meta.xml
<CustomField>
    <fullName>Lost_Date__c</fullName>
    <label>Churn Date</label>
    <type>Date</type>
</CustomField>